wrote clean target

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,9 @@ MAIN = main
 all: $(OBJS)
 	cd ..; make
 
+clean:
+	rm -rf $(MAIN) $(OBJS)
+
 test: all
 	$(CC) -o $(MAIN) $(OBJS) ../bitscan.o
 	./$(MAIN)
