--- a/test/Makefile
+++ b/test/Makefile
@@ -1,8 +1,10 @@
 CFLAGS = -I..
 
 OBJS = main.o test.o testgen.o \
-	   testrawbitget.o testrawbitcmp.o testrawbitrand.o \
-	   testrawbitclear.o testrawbitset.o testmake.o
+	   testrawbitclear.o testrawbitcmp.o testrawbitcpy.o \
+	   testrawbitget.o \
+	   testrawbitrand.o \
+	   testrawbitset.o testmake.o
 MAIN = main
 
 all: $(OBJS)
