changed to copy bitscan.h and bitscan.c to test directory

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,19 +1,22 @@
-CFLAGS = -I..
+CFLAGS = -Wall -std=c99 -O2
 
-OBJS = main.o test.o testgen.o \
+OBJS = bitscan.o main.o test.o testgen.o \
 	   testrawbitclear.o testrawbitcmp.o testrawbitcpy.o \
 	   testrawbitget.o \
 	   testrawbitop.o testrawbitrand.o \
 	   testrawbitset.o testmake.o
 MAIN = main
 
-all: $(OBJS)
+all: bitscan $(OBJS)
 	cd ..; make
+
+bitscan:
+	cp ../bitscan.h ../bitscan.c .
 
 clean:
 	rm -rf $(MAIN) $(OBJS)
 
 test: all
-	$(CC) -o $(MAIN) $(OBJS) ../bitscan.o
+	$(CC) -o $(MAIN) $(CFLAGS) $(OBJS)
 	./$(MAIN)
 
