removed struct bitarray and renamed rawbit... function names to bit...

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,10 @@
 CFLAGS = -Wall -std=c99 -O2
 
 OBJS = bitscan.o main.o test.o testgen.o \
-	   testrawbitclear.o testrawbitcmp.o testrawbitcpy.o \
-	   testrawbitget.o \
-	   testrawbitop.o testrawbitrand.o \
-	   testrawbitset.o testrawbitshift.o testmake.o
+	   testbitclear.o testbitcmp.o testbitcpy.o \
+	   testbitget.o \
+	   testbitop.o testbitrand.o \
+	   testbitset.o testbitshift.o
 MAIN = main
 
 all: test
